# data-insight-agent

./: .gitignore  .mcp.json.example  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  package.json
docs/: getting-started.md
mcp/alibabacloud-lindorm-mcp-server/: README.md  pyproject.toml
mcp/alibabacloud-lindorm-mcp-server/cache/: lindorm_describe_table_20251128_182900_8637c892.json  lindorm_describe_table_20251202_110225_8637c892.json  lindorm_describe_table_20251203_104458_466749e6.json  lindorm_describe_table_20251204_115636_83c1ac90.json  lindorm_describe_table_20251209_164051_8637c892.json  lindorm_execute_sql_20251128_182911_5b350972.json  lindorm_execute_sql_20251128_182919_53178eeb.json  lindorm_execute_sql_20251201_182902_40a81708.json  lindorm_execute_sql_20251201_183112_547c32f1.json  lindorm_execute_sql_20251201_183315_f1b9b661.json  lindorm_execute_sql_20251201_183323_5d9cc7bc.json  lindorm_execute_sql_20251201_183326_c384387f.json  lindorm_execute_sql_20251201_183330_2a940903.json  lindorm_execute_sql_20251201_183338_098dc1cd.json  lindorm_execute_sql_20251201_183342_afe0cb2a.json  lindorm_execute_sql_20251201_183350_8405ad9f.json  lindorm_execute_sql_20251201_183353_161a5536.json  lindorm_execute_sql_20251201_183359_cba30276.json  lindorm_execute_sql_20251201_183404_37e22ea7.json  lindorm_execute_sql_20251201_183418_68ee3b67.json  lindorm_execute_sql_20251201_183426_37f88786.json  lindorm_execute_sql_20251201_183429_e3733148.json  lindorm_execute_sql_20251201_183439_12c3ea93.json  lindorm_execute_sql_20251201_183445_c5130fed.json  (+89 more)
prp/: skill.md
(+25 files in other folders)
